--- a/main.html
+++ b/main.html
@@ -8,11 +8,15 @@
 
 <body style="background-color:yellow;text-align:center;">
 	<!-- the entire body must be written by student -->
+	<div>
 	<h1 id="f1">Flowers photos</h1>
 	<p>A flower, also known as a bloom or blossom, is the reproductive structure found in flowering plants (plants of the division Angiospermae).</p>
+	</div>
+	<div>
 	<h2 id="f2">Roses pictures</h2>
 	<p> Flowers consist of a combination of vegetative organs – sepals that enclose and protect the developing flower. </p>
-    <script type="text/javascript" src="./script.js">
+		</div>
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
